# ruzu

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.githooks/: pre-commit
.specify/memory/: constitution.md
benches/: buffer_benchmark.rs  csv_benchmark.rs  e2e_benchmark.rs  memory_benchmark.rs  parse_benchmark.rs  query_benchmark.rs  rel_persist_benchmark.rs  storage_benchmark.rs
docs/: feasibility-assessment.md
examples/: insert_node.rs  random_nodes.rs
specs/001-fix-rel-persistence/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-fix-rel-persistence/checklists/: requirements.md
specs/001-fix-rel-persistence/contracts/: load-api.md  save-format.md
specs/001-poc-basic-functionality/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-poc-basic-functionality/checklists/: requirements.md
specs/001-poc-basic-functionality/contracts/: database-api.md
specs/002-persistent-storage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-persistent-storage/checklists/: requirements.md
specs/002-persistent-storage/contracts/: storage-format.md
specs/003-optimize-csv-import/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-optimize-csv-import/checklists/: requirements.md
specs/003-optimize-csv-import/contracts/: csv-import-api.md
specs/004-optimize-csv-memory/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-optimize-csv-memory/checklists/: requirements.md
specs/004-optimize-csv-memory/contracts/: streaming-api.md
specs/005-query-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-query-engine/checklists/: requirements.md
specs/006-add-datatypes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-multi-page-storage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: error.rs  lib.rs
src/binder/: expression.rs  mod.rs  query_graph.rs  scope.rs  semantic.rs
src/catalog/: mod.rs  schema.rs
src/datafusion/: cypher_to_df.rs  mod.rs  table_provider.rs
src/executor/: extend.rs  filter.rs  mod.rs  project.rs  scan.rs
src/parser/: ast.rs  grammar.pest  grammar.rs  mod.rs
src/planner/: logical_plan.rs  mod.rs  physical_plan.rs
src/planner/optimizer/: mod.rs  (+2 more)
src/storage/: column.rs  mod.rs  rel_table.rs  table.rs
src/types/: mod.rs  value.rs
tests/: contract_tests.rs  integration_tests.rs  unit_tests.rs
tests/query_engine_contracts/: binder_contract.rs  executor_contract.rs  mod.rs  optimizer_contract.rs  planner_contract.rs
(+32 files in other folders)
